feat(agent-orchestrator) Update orchestrator and connector